# sg_cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: artifact-on-push.yml  codecov.yml  rust-codecov.yml
example/: sg_cli.toml
nix-scripts/: cargo-build.nix  codecov.nix
nix-shell/: codecov.nix
src/: lib.rs  main.rs
tests/: steam_guard.rs
