[package]
name = "sg_cli"
version = "0.1.0"
edition = "2021"

description = "Steam Guard code, but locally and offline."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
steam_guard = "1.0.1"
dirs = "4.0.0"
tap = "1.0.1"

toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }

atty = "0.2.14"

clap = { version = "3.0.6", features = ["derive"] }
