[package]
name = "sg_cli"
version = "0.1.0"
edition = "2021"

description = "Steam Guard code, but locally and offline."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
steam_guard = "1.0.1"
dirs = "5.0"
tap = "1.0.1"

toml = "0.8.8"
serde = { version = "1.0", features = ["derive"] }

clap = { version = "4.4.8", features = ["derive"] }
